# esp32_google_home_display

./: .gitignore  CMakeLists.txt  README.md  matter-prereq.sh  sdkconfig
.devcontainer/: Dockerfile
main/: CMakeLists.txt  display_device.cpp  display_device.h  idf_component.yml  lvgl_device.cpp  lvgl_device.h  main.c  main.cpp  matter.cpp  matter.h  matter_callback.cpp  matter_callback.h  render.c  render.cpp  render.h
